<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter</string>
    <string name="login_label">Log in TO TWITTER</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="title_activity_timeline">TimelineActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="himt_compose_tweet">What\'s happening?</string>
    <string name="label_tweet">Tweet</string>
    <string name="label_logout">Logout</string>
    <string name="default_tweet_char_limit">140</string>
    <string name="label_following">Following</string>
    <string name="label_follower">Followers</string>
    <string name="menu_label_profile">Profile</string>
    <string name="screenNameFormat">\@%s</string>
    <string name="label_tweets">Tweets</string>
    <string name="tools_tweet_body">Some very long tweet which i could not wite here, but still i am trying to write someting which has around 140 characters. Did u know that some people can tweet 280 chars</string>
    <string name="tools_timestamp">8:59 AM . 08 Oct 17</string>
    <string name="label_retweets">Retweets</string>
    <string name="label_likes">Likes</string>
    <string name="label_reply_posted">Reply Posted Successfully</string>

</resources>